--- a/complete-javascript-course-master/5-advanced-JS/starter/index.html
+++ b/complete-javascript-course-master/5-advanced-JS/starter/index.html
@@ -8,6 +8,6 @@
     <body>
         <h1>Section 5: Advanced JavaScript: Objects and Functions</h1>
         <!-- <script src="script.js"></script> -->
-        <script src="quiz.js"></script>
+        <script src="quiz2.js"></script>
     </body>
 </html>
